--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -134,7 +134,7 @@ cards:
     abstract: >
       Daily and cumulative numbers of COVID-19 patients admitted to hospital. Data from the
       four nations may not be directly comparable as data about COVID-19 patients in
-      hospitals are collected differently. Data are not all reported by each nation every
+      hospitals are collected differently. Data are not reported by each nation every
       day. The UK figure is the sum of the four nations' figures and can only be calculated
       when all nations' data are available.
 
@@ -470,7 +470,7 @@ cards:
     abstract: >
       Daily count of COVID-19 patients in hospital. Data from the four nations may not be
       directly comparable as data about COVID-19 patients in hospitals are collected
-      differently. Data are not all reported by each nation every day. The UK figure is the
+      differently. Data are not reported by each nation every day. The UK figure is the
       sum of the four nations' figures and can only be calculated when all nations' data are
       available.
 
@@ -642,7 +642,7 @@ cards:
           - overview
       
     abstract: >
-      Daily count of COVID-19 patients in mechanical ventilation beds. Data are not all reported
+      Daily count of COVID-19 patients in mechanical ventilation beds. Data are not reported
       by each nation every day.
 
     download:
@@ -745,7 +745,7 @@ cards:
     abstract: >
       COVID-19 patients in mechanical ventilation beds. Data from the four nations may not be
       directly comparable as data about COVID-19 patients in hospitals are collected
-      differently. Data are not all reported by each nation every day. The UK figure is the
+      differently. Data are not reported by each nation every day. The UK figure is the
       sum of the four nations' figures and can only be calculated when all nations' data are
       available.
    
